--- a/nuget.config
+++ b/nuget.config
@@ -4,4 +4,4 @@
         <add key="NuGet official package source" value="https://api.nuget.org/v3/index.json" />
         <add key="Local Packages" value="src\Files.Package\nupkgs\" />
     </packageSources>
-</configuration>
+</configuration
